@@ -1,0 +1,28 @@
+<!--
+   Licensed to the Apache Software Foundation (ASF) under one or more
+   contributor license agreements.  See the NOTICE file distributed with
+   this work for additional information regarding copyright ownership.
+   The ASF licenses this file to You under the Apache License, Version 2.0
+   (the "License"); you may not use this file except in compliance with
+   the License.  You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+-->
+<FindBugsFilter>
+  <!--
+    FindBugs is complaining about CredentialsSys#getAuxGIDs(...) returning
+    a mutable array, but it is alright in our case, and copies would be
+    more expensive instead.
+  -->
+  <Match>
+      <Class name="org.apache.hadoop.oncrpc.security.CredentialsSys"/>
+      <Method name="getAuxGIDs" params="" returns="int[]"/>
+      <Bug code="EI"/>
+  </Match>
+</FindBugsFilter>
